[package]
name = "pkc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pkc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.9.5"
anchor-lang = "0.20.1"
bincode = "1.3.3"
bytemuck = "*"
rsa = { path = "../../../RSA", default-features = false, features = ["alloc", "default", "std", "pem", "serde"] }
num-bigint = { version = "0.8.1", features = ["i128", "u64_digit", "zeroize"], default-features = false, package = "num-bigint-dig", path = "../../../num-bigint" }
num-traits = { version= "0.2.9", default-features = false, features = ["libm"] }


[dev-dependencies]
solana-sdk = "1.9.5"
solana-program-test = "1.9.5"
solana-logger = "1.9.5"
