[package]
name = "pkc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pkc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.9.5"
anchor-lang = "0.20.1"
bincode = "1.3.3"
bytemuck = "*"
#rsa = { path = "../../../RSA", default-features = false, features = ["alloc", "default", "std", "pem", "serde"] }
#num-bigint = { version = "0.8.1", features = ["i128", "u64_digit", "zeroize"], default-features = false, package = "num-bigint-dig", path = "../../../num-bigint" }
#num-traits = { version= "0.2.9", default-features = false, features = ["libm"] }
crypto_box = { path = "../../../nacl-compat/crypto_box", default-features = false, features = ["alloc", "u64_backend", "serde"] }

#chacha20poly1305 = { path = "../../../AEADs/chacha20poly1305", default-features = false, features = ["alloc"] }
xsalsa20poly1305 = { path = "../../../AEADs/xsalsa20poly1305", default-features = false, features = ["alloc"] }
#zeroize = { version = ">=1", default-features = false }
#x25519-dalek = { path = "../../../x25519-dalek", default-features = false }



[dev-dependencies]
solana-sdk = "1.9.5"
solana-program-test = "1.9.5"
solana-logger = "1.9.5"
